# ModelForge

./: .gitignore  INSTALL.md  README.md  README.txt  __init__.py  _check_load.py  model_builder.py  pyproject.toml  todo.txt
.github/workflows/: ci.yml  package.yml
archive/model_forge_initial/: forge_widget.py  metadata.txt
archive/v1/model_forge/: __init__.py  forge_dialog.py  forge_widget.py  forge_widget_old.py  llm_backend.py  model_builder.py
archive/v2/model_forge/: llm_backend.py  metadata.txt  model_builder.py  model_forge.py
archive/v3/model_forge/: forge_dock.py  forge_widget.py  llm_backend.py  metadata.txt  model_forge.py
model_forge/: __init__.py  forge_dock.py  forge_generate_worker.py  forge_widget.py  metadata.txt  model_forge.py
model_forge/compiler_core/: __init__.py  log.py  model_forge_plugin.py
model_forge/compiler_core/core/: context_collector.py  generate_worker.py
model_forge/compiler_core/provider/: model_forge_provider.py
model_forge/compiler_core/resources/: __init__.py
model_forge/forge_widget_helpers/: forge_widget_base.py  forge_widget_history.py  forge_widget_layout.py  forge_widget_map.py
model_forge/legacy_base/: context_collector.py  llm_backend.py  model_builder.py  model_layout.py
model_forge/legacy_ui/: __init__.py  forge_widget.py  llm_backend.py
model_forge/mcp_server/: __init__.py  __main__.py  errors.py  jobs.py  llm_config.py  prompts.py  server.py  subscriptions.py
modelforge_linked/: __init__.py  forge_dock.py  forge_widget.py  metadata.txt  model_forge.py
modelforge_linked/compiler_core/: __init__.py  model_forge_plugin.py  requirements.txt
modelforge_linked/legacy_ui/: forge_dock.py  forge_widget.py  model_builder.py  model_layout.py
tests/: conftest.py  test_link_repair.py  test_qgis_integration.py
tests/forge_widget/: conftest.py  test_forge_widget_map.py
tests/legacy_base/: test_llm_backend_layout_design.py
tests/mcp_server/: test_errors.py  test_headless.py  test_jobs.py  test_llm_config.py  test_progress_pipeline.py  test_server_state.py  test_subscriptions.py
v1/model_forge/: forge_dock.py  forge_widget_old.py  metadata.txt  model_forge.py
v2/model_forge/: context_collector.py  forge_dock.py  forge_widget.py
v3/model_forge/: context_collector.py
v4/model_forge/: context_collector.py  forge_widget.py  llm_backend.py  metadata.txt
(+100 files in other folders)
