[project]
name = "model-forge"
version = "1.0.0"
description = "QGIS plugin converting natural-language geoprocessing descriptions into Processing models"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-qt",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "N802", "N803", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["model_forge"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
